Add dedicated red flags API
